// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _accessKey="V" 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input accesskey="V" aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _alert=true 1`] = `
<kol-single-select _alert="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _disabled=true 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled kol-single-select__input" disabled="" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-custom-suggestions-toggle--disabled kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _hint="Hint" 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="id-nonce-hint">
        Hint
      </span>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-single-select _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-describedby="id-nonce-error" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-describedby="id-nonce-msg" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _readOnly=true 1`] = `
<kol-single-select _readonly="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _shortKey="S" 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" aria-keyshortcuts="S" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] _touched=true 1`] = `
<kol-single-select _touched="">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--touched kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-input--touched kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;

exports[`kol-single-select should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _options=[{"label":"Frau","value":"Frau","disabled":true},{"label":"Herr","value":"Herr"},{"label":"Divers","value":"Divers"}] 1`] = `
<kol-single-select>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-single-select">
      <label class="kol-form-field__label" for="id-nonce" id="id-nonce-label">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__label" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <div class="kol-single-select__group">
              <input aria-autocomplete="both" aria-controls="listbox" autocapitalize="off" autocorrect="off" class="kol-input kol-single-select__input" id="id-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" role="combobox" type="text" value="">
              <i aria-hidden="true" class="kol-custom-suggestions-toggle kol-icon kol-icon__icon kolicon-chevron-down" role="presentation"></i>
            </div>
            <ul class="kol-custom-suggestions-options-group" hidden="" role="listbox" style="--visible-options: 5;">
              <li aria-disabled="true" class="kol-custom-suggestions-option kol-custom-suggestions-option--disabled" data-index="0" id="option-0" role="option" tabindex="-1">
                <span>
                  Frau
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="1" id="option-1" role="option" tabindex="-1">
                <span>
                  Herr
                </span>
              </li>
              <li class="kol-custom-suggestions-option" data-index="2" id="option-2" role="option" tabindex="-1">
                <span>
                  Divers
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-single-select>
`;
